--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,9 @@ rust:
   - stable
   - beta
   - nightly
+before_install:
+  - sudo apt-get -qq update
+  - sudo apt-get install -y libssh2-1-dev
 matrix:
   allow_failures:
     - rust: nightly
