--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,10 +25,9 @@ path = "src/home.rs"
 travis-ci = { repository = "Enet4/cargo-navigate" }
 
 [dependencies]
-clap = "^2.19.2"
-hyper = "^0.10.7"
-hyper-native-tls = "^0.2.2"
-open = "^1.1.1"
-serde = "^0.9.3"
-serde_json = "^0.9"
-toml = "^0.3.2"
+clap = "2.32.0"
+open = "1.2.2"
+serde = "1.0.84"
+serde_json = "1.0.34"
+toml = "0.4.10"
+reqwest = "0.9.5"
